moved values files

--- a/frappe/cluster-pre-req-appset.yaml
+++ b/frappe/cluster-pre-req-appset.yaml
@@ -11,7 +11,7 @@ spec:
     path: frappe/erpnext
     helm:
       valueFiles:
-        - frappe/values-custom.yaml
+        -  values-custom.yaml
   destination:
     server: 'https://kubernetes.default.svc'
     namespace: erpnext
