--- a/frappe/erpnext/values-customer2.yaml
+++ b/frappe/erpnext/values-customer2.yaml
@@ -13,20 +13,20 @@ redis-queue:
   host: "redis://redis-queue-master.common-apps:6379"
 ingress:
   enabled: true
-  ingressName: "erp.kube.themallams.com"
+  ingressName: "erp-customer2.kube.themallams.com"
   annotations:        
     cert-manager.io/cluster-issuer: letsencrypt-prod
     kubernetes.io/ingress.class: nginx
     kubernetes.io/tls-acme: "true"
   hosts:
-  - host: erp.kube.themallams.com
+  - host: erp-customer2.kube.themallams.com
     paths:
     - path: /
       pathType: ImplementationSpecific
   tls:
    - secretName: erp-tls
      hosts:
-       - erp.kube.themallams.com
+       - erp-customer2.kube.themallams.com
 
 persistence:
   worker:
@@ -34,14 +34,14 @@ persistence:
 jobs:
   createSite:
     enabled: true
-    siteName: "erp.kube.themallams.com"
+    siteName: "erp-customer2.kube.themallams.com"
     adminPassword: "Welcome123@"
     installApps:
       - erpnext
   dropSite:
     enabled: false
     forced: false
-    siteName: "erp.kube.themallams.com"
+    siteName: "erp-customer2.kube.themallams.com"
     backoffLimit: 0
     resources: {}
     nodeSelector: {}
