new values for different customers

--- a/frappe/customer2-frappe-argo-app.yaml
+++ b/frappe/customer2-frappe-argo-app.yaml
@@ -17,3 +17,6 @@ spec:
     namespace: customer2
   syncPolicy:
     automated: {}
+    syncOptions:
+      - Validate=true
+      - CreateNamespace=true
