--- a/frappe/customer1-frappe-argo-app.yaml
+++ b/frappe/customer1-frappe-argo-app.yaml
@@ -17,3 +17,6 @@ spec:
     namespace: customer1
   syncPolicy:
     automated: {}
+    syncOptions:
+      - Validate=true
+      - CreateNamespace=true
