--- a/common-apps-appset.yaml
+++ b/common-apps-appset.yaml
@@ -7,7 +7,7 @@ spec:
   generators:
     - list:
         elements:
-          - name: commmon-apps
+          - name: common-apps
             namespace: common-apps
   template:
     metadata:
